# 10-Alarm-System

./: README.md  api_compose.yml  db_compose.yml  monitor_compose.yml  prometheus.yml
alarm_app/app/: build.gradle.kts
alarm_app/gradle/: libs.versions.toml
alarm_queue/: .env  docker-compose.yml  redis.conf
api/: go.mod  go.sum  main.go
api/cmd/: route.go
api/config/: config.go
api/model/: model.go
chojungho/: README.md  build.gradle.kts  settings.gradle.kts
chojungho/alarm_app/: settings.gradle.kts
chojungho/alarm_service/: .dockerignore  .gitignore  pyproject.toml
chojungho/alarm_service/src/: .env  .env.example  container.py  main.py
chojungho/alarm_service/src/api/v1/alarm/: container.py  domain.py  endpoint.py  models.py  repository.py  services.py
chojungho/alarm_service/src/common/: __init__.py  config.py
chojungho/alarm_service/src/infrastructure/schema/: alarm_schema.py
chojungho/alarm_work/: .env  .env.example  go.mod  go.sum  main.go
chojungho/app/: build.gradle.kts  google-services.json
chojungho/gradle/: libs.versions.toml
data/db_script/: create.sh
flutter/: README.md  pubspec.yaml
flutter/android/: build.gradle
flutter/lib/: main.dart
flutter/web/: index.html  manifest.json
flutter_alaram_design/: README.md  firebase.json  pubspec.yaml
flutter_alaram_design/android/: build.gradle
flutter_alaram_design/lib/: firebase_options.dart  main.dart
flutter_alaram_design/linux/: CMakeLists.txt  (+1 more)
messageWorker/: go.mod  go.sum  google-services.json  main.go
push_server/: .env  main.py
test/: go.mod  main.go
(+65 files in other folders)
