[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["jhcho <cho418651@ssrinc.co.kr>"]
description = ""
name = "alarm-service"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
asyncio-redis = "^0.16.0"
asyncpg = "^0.30.0"
black = "^24.10.0"
dependency-injector = "^4.43.0"
fastapi = {extras = ["standard"], version = "^0.115.5"}
flake8 = "^7.1.1"
isort = "^5.13.2"
pika = "^1.3.2"
pre-commit = "^4.0.1"
psycopg2 = "^2.9.10"
pydantic-settings = "^2.6.1"
python = "^3.11"
redis = "^5.2.0"
ruff = "^0.7.3"
sqlalchemy = "^2.0.36"
toml-sort = "^0.23.1"
